--- a/fetchmail_attach_from_folder/view/fetchmail_server.xml
+++ b/fetchmail_attach_from_folder/view/fetchmail_server.xml
@@ -10,7 +10,7 @@
                     <field name="object_id" position="attributes">
                         <attribute name="attrs">{'required': [('type', '!=', 'imap')]}</attribute>
                     </field>
-                    <xpath expr="//page[@string='Server &amp; Login']/group/group[3]" position="after">
+                    <xpath expr="//notebook/page[1]/group/group[3]" position="after">
                         <group attrs="{'invisible': [('type','!=','imap')]}" string="Folders to monitor">
                             <field
                                 name="folder_ids"
@@ -43,7 +43,12 @@
                                             <field name="flag_nonmatching" />
                                             <field name="match_first" />
                                             <field name="msg_state" />
-                                            <field name="model_order" attrs="{'readonly': [('match_first','==',False)], 'required': [('match_first','==',True)]}" placeholder="name asc,type desc" />
+                                            <!--
+                                             TODO: fix fields_view_get on model
+                                             so we can put this back:
+                                              attrs="{'readonly':[('match_first','=',False)],'required':[('match_first','=',True)]}"
+                                            -->
+                                            <field name="model_order" placeholder="name asc,type desc" />
                                             <field name="domain" placeholder="[('state', '=', 'open')]" />
                                         </group>
                                     </group>
